# mlops-zoomcamp

./: LICENSE  mlflow.db  pyproject.toml
01-intro/: hw1.ipynb
02-mlflow/: hw1.ipynb  hw2.ipynb
mlartifacts/3/018b564f54ed418899c2ab8bfe19e2af/artifacts/model/: MLmodel
mlartifacts/3/08f956fc0c3444c7ba25da21ab5739af/artifacts/model/: MLmodel
mlartifacts/3/2194c6c74cb74bba9dcc1e5ec3dda30a/artifacts/model/: MLmodel  python_env.yaml
mlartifacts/3/2815f9877b7f47268e4fce1b8a411f2e/artifacts/model/: MLmodel
mlartifacts/3/2e6f713b48ff4dc096aabe9ed304ba2b/artifacts/model/: MLmodel
mlartifacts/3/3851cfa1b4ce42a6bf35978452f8741f/artifacts/model/: MLmodel
mlartifacts/3/3d4812481f8d472d9a7dbc528448ceb5/artifacts/model/: MLmodel
mlartifacts/3/3e5c6d0e43a54f0e937f391f371612ad/artifacts/model/: MLmodel
mlartifacts/3/3e80e2ae549646e684aceedcec69f260/artifacts/model/: MLmodel
mlartifacts/3/4534cc1f160f430e8ab508b1e75726bd/artifacts/model/: MLmodel
mlartifacts/3/4968a8b210684d26912704765a466387/artifacts/model/: MLmodel
mlartifacts/3/6e149a9125c74e9faa5ace8acb3df53a/artifacts/model/: MLmodel
mlartifacts/3/94ce7deb02c34269a6cb143f26be6e27/artifacts/model/: MLmodel
mlartifacts/3/a7748c24975a4ec79dc74cb3ba7244c3/artifacts/model/: MLmodel
mlartifacts/3/b17e3c887b3d4856866b18d8d5e9d4fb/artifacts/model/: MLmodel
mlartifacts/3/b6a8585b5ef54443aebb97a1d7ad31bf/artifacts/model/: MLmodel
mlartifacts/3/b7470e2f846a4811bb135c9389bd2758/artifacts/model/: MLmodel
scripts/: hpo.py  register_model.py  train.py
(+36 files in other folders)
