[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Environment for MLOps practice"
authors = ["Aleksandr Salynskii <asalynskii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
pyarrow = "^16.1.0"
jupyterlab-git = "^0.50.1"
pandas = "^2.2.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
