[tool.poetry]
name = "mlops-zoomcamp"
package-mode = false
version = "0.1.0"
description = "Environment for MLOps practice"
authors = ["Aleksandr Salynskii <asalynskii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.4.2"
pyarrow = "*"
jupyterlab-git = "^0.50.1"
pandas = "^2.2.2"
tqdm = "^4.66.4"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
mlflow = "^2.13.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
